add resume functionality for llm call to label object usage, fixed bug in prompt generator, updated slurm file

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ logs/*.out
 logs/*.err
 outputs/object_crops/
 outputs/linked_objects_llm_*
+outputs/object_usage_labels_*
 
 ## VS Code settings and temporary files
 .vscode/
