split video file into quarters, create arguments for model name and arguments, add maximum segment length, debug script to count the number of input output tokens, ignore scene graphs and prompts

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ logs/*.err
 outputs/object_crops/
 outputs/linked_objects_llm_*
 outputs/object_usage_labels_*
+outputs/prompts/*
+outputs/scene_graphs/*
 
 ## VS Code settings and temporary files
 .vscode/
